teigen version 2.2.0 2016-12-06
- Added predict S3 method and associated help file
- Updated teigen function help file

teigen version 2.1.1 2016-09-10
- Corrected help file
- Added tick marks for observations in univariate plot
- Fixed bugs in plot method (univariate mixture curve was missing 
  and specifying margins for uncertainty plot previously were ignored)

teigen version 2.1.0 2015-11-19:
- Changed defaults of 'maxit' to c(Inf, Inf).
- Added ckd (chronic kidney disease) data set and documentation.
- estimateTime bug fix. Correct output displayed in Rgui, Rstudio or R from command line.
- New argument "parallel.cores" added to teigen so serial and parallel version can be run from
  one function. Default value is FALSE (serial). teigen.parallel function no longer available.
- kmeans now chooses best of 50 runs to strengthen consistency.
- Upgraded plot function. Can plot univariate marginals of a multivariate teigen object with
  ymarg = NULL. Legend moved outside graph. More flexibility with using graphing parameters
  such as mfrow, cex, col, pch, lwd, lty. Uncertainty plot more readable. Aesthetics improved.
- teigen.print displays a short, concise description. Output is different from summary.teigen
- Argument anneal removed due to lack of utility
- Increased efficiency through some code translation into C and unnecessary code removal

teigen version 2.0.81 2015-5-26:
- Bug fix

teigen version 2.0.8 2015-1-28:
- Added iteration counts via "iter" and "iclresults$iter" and updated help files to reflect this
- Bug fix

teigen version 2.0.7 2014-08-19:

- Argument dfupdate now takes characters "approx" or "numeric", or logicals TRUE or FALSE (see next two changes)
- Closed-form approximation of degrees of freedom added dfupdate="approx"
- Increased efficiency of numeric estimation of degrees of freedom dfupdate="numeric" or TRUE (for back compatibility)
- Univariate plots for objects of teigen class improved
- More error catches added