@@ -1,17 +1,18 @@
-02cda4851829b59be64c565ff4890f84 *ChangeLog
-7b69c18853d6ed9aa1f3a3a7143b79e3 *DESCRIPTION
+1b5a9483307180731b604f5fabf01d22 *ChangeLog
+4bf6f7d100dae83c46b5964ffdf5c541 *DESCRIPTION
 af200c4d148a05712251cbfd26333bfd *NAMESPACE
-9e937acde2fa825595fb53945bf705de *R/teigen.R
+b2e8aa752fb0ead08690aa13e9aefa1c *R/teigen.R
 0b563a754f710721e02cc1a712d5ecec *data/ckd.RData
-9d3ac5d5f80f2f6e7704035dd192f7dc *inst/CITATION
+29f3283afbba64af8796005fa989ba46 *inst/CITATION
 834505db59f2580cfeb5f4ee12057050 *man/ckd.Rd
 f9997637174715c051db6d683320f866 *man/plot.teigen.Rd
 655a57f012a3dcacef4e9716e14c8fd0 *man/predict.teigen.Rd
 1ee84d08792218608f204f6ed10347b9 *man/print.teigen.Rd
 5d4a212a9ed70217448ccc8d7b4f596f *man/summary.teigen.Rd
-4d90e11d3924d9d65645502498b48411 *man/teigen-package.Rd
+cc2126fa5f6a0953339aca8edcbcc543 *man/teigen-package.Rd
 d946e1a7eb81a0bfd8dce3ff42a7a116 *man/teigen.Rd
 af56dcdf406e20f91cdef26bff65e1fd *src/covwt.c
+7220f3287c8948044e297e5c1a6f332c *src/init.c
 4bbcb799f868242299eaab2ec6f2d532 *src/maha.c
 ca75d1d9454751edb7f801cc07605e75 *src/teigen.c
 18a3a4a1925f348988a4beb0acc52360 *src/teigen.h
