@@ -13,8 +13,8 @@ Fits mixtures of multivariate t-distributions (with eigen-decomposed covariance 
 \tabular{ll}{
 Package: \tab teigen\cr
 Type: \tab Package\cr
-Version: \tab 2.2.0\cr
-Date: \tab 2016-12-06\cr
+Version: \tab 2.2.2\cr
+Date: \tab 2018-02-15\cr
 License: \tab GPL (>=2)\cr
 LazyLoad: \tab yes\cr
 }
@@ -25,6 +25,8 @@ Jeffrey L. Andrews, Jaymeson R. Wickins, Nicholas M. Boers, Paul D. McNicholas
 Maintained by: Jeffrey L. Andrews <jeff.andrews@ubc.ca>
 }
 \references{
+Andrews JL, Wickins JR, Boers NM, and McNicholas PD (2018). ``teigen: An R package for model-based clustering and classification via the multivariate t distribution'' \emph{Journal of Statistical Software} 83(7), 1--32.
+
 Andrews JL and McNicholas PD (2012). ``Model-based clustering, classification, and discriminant analysis with the multivariate \emph{t}-distribution: The \emph{t}EIGEN family'' \emph{Statistics and Computing} 22(5), 1021--1029. 
 
 Andrews JL, McNicholas PD, and Subedi S (2011) ``Model-based classification via mixtures of multivariate t-distributions'' \emph{Computational Statistics and Data Analysis} 55, 520--529.
